looking good, need to remove hairline borders

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -21,17 +21,24 @@ content {
 .secs {
   display: flex;
   flex-direction: row;
-  margin-right: 1rem;
 }
 
 .digit {
   display: inline-block;
 }
 
+h1 {
+  font-size: 3rem;
+}
+
+body {
+  width: 90%;
+  margin: 0 auto;
+}
+
 img {
   width: 157px;
   height: 263px;
-  transform: scale(0.5);
 }
 
 img.digit_0 {
