--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,12 +1,17 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 html {
   font-size: 16px;
+  font-family: 'Poppins', sans-serif;
   background-color: white;
+}
+
+h2 {
+  margin-bottom: 2rem;
 }
 
 content {
@@ -21,6 +26,10 @@ content {
 .secs {
   display: flex;
   flex-direction: row;
+  margin-right: 2rem;
+  border: 4px solid black;
+  border-bottom: 8px solid black;
+  box-shadow: 0px 0px 18px black;
 }
 
 .digit {
