--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -27,6 +27,7 @@ content {
   display: flex;
   flex-direction: row;
   margin-right: 2rem;
+  margin-bottom: 2rem;
   border: 4px solid black;
   border-bottom: 8px solid black;
   box-shadow: 0px 0px 18px black;
