--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -28,12 +28,12 @@ content {
   flex-direction: row;
   margin-right: 2rem;
   margin-bottom: 2rem;
-  border: 4px solid black;
-  box-shadow: 0px 0px 18px black;
+  filter: drop-shadow(0px,0px,12px,rgba(0,0,0,.3));
 }
 
 .digit {
   display: inline;
+  font-family: 'Merriweather Sans', sans-serif;
 }
 
 h1 {
@@ -44,50 +44,4 @@ body {
   width: 90%;
   margin: 0 auto;
 
-}
-
-img {
-  width: 45px;
-  height: 70px;
-  background-size: contain;
-}
-
-img.digit_0 {
-  background-image: url('../images/digit0.png');
-}
-
-img.digit_1 {
-  background-image: url('../images/digit1.png');
-}
-
-img.digit_2 {
-  background-image: url('../images/digit2.png');
-}
-
-img.digit_3 {
-  background-image: url('../images/digit3.png');
-}
-
-img.digit_4 {
-  background-image: url('../images/digit4.png');
-}
-
-img.digit_5 {
-  background-image: url('../images/digit5.png');
-}
-
-img.digit_6 {
-  background-image: url('../images/digit6.png');
-}
-
-img.digit_7 {
-  background-image: url('../images/digit7.png');
-}
-
-img.digit_8 {
-  background-image: url('../images/digit8.png');
-}
-
-img.digit_9 {
-  background-image: url('../images/digit9.png');
 }
