plaindigits branch looking good

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -15,11 +15,8 @@ h2 {
 }
 
 content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(8,12.5%);
 }
 
 .days,
@@ -32,6 +29,10 @@ content {
   margin-right: 2rem;
   margin-bottom: 2rem;
   filter: drop-shadow(0px,0px,12px,rgba(0,0,0,.3));
+}
+
+.title {
+  margin: auto 0;
 }
 
 .digit {
